--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.14",
     "del": "^5.1.0",
     "fontforge": "^0.0.4",
     "global": "^4.4.0",
@@ -48,6 +48,8 @@
     "gulp-webp-html": "^1.0.2",
     "imagemin-jpeg-recompress": "^7.0.0",
     "imagemin-pngquant": "^8.0.0",
+    "mixitup": "^3.3.1",
+    "rateyo": "^2.3.5",
     "replace": "^1.2.0",
     "sass": "^1.26.7",
     "slick-carousel": "^1.8.1",
